--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,13 @@
     "dev": "cross-env BACKEND_PORT=8083 tsx src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "typecheck": "tsc --noEmit -p tsconfig.json"
+    "typecheck": "tsc --noEmit -p tsconfig.json",
+    "scan:schema": "tsx scripts/scan-schema.ts",
+    "map:schema": "tsx scripts/map-schema-from-excel.ts",
+    "map:schema:final": "tsx scripts/build-final-mapping.ts",
+    "map:dbinfo": "tsx scripts/map-schema-from-dbinfo.ts",
+    "inspect:dbinfo": "tsx scripts/inspect-db-information.ts",
+    "ensure:note": "tsx scripts/ensure-note-column.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -15,6 +21,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "ldapjs": "^2.3.3",
+    "mssql": "^12.2.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -22,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/ldapjs": "^2.0.12",
+    "@types/mssql": "^9.1.8",
     "cross-env": "^7.0.3",
     "tsx": "^4.19.2",
     "typescript": "^5.8.3"
