--- a/.env.example
+++ b/.env.example
@@ -1,62 +1,37 @@
-# Frontend (Vite) - Supabase
-VITE_SUPABASE_PROJECT_ID="your-project-id"
-VITE_SUPABASE_PUBLISHABLE_KEY="your-anon-key"
-VITE_SUPABASE_URL="https://your-project-id.supabase.co"
+# Backend server
+BACKEND_PORT=8083
+FRONTEND_URL=http://localhost:8080
+FRONTEND_URLS=http://localhost:8080,http://127.0.0.1:8080
 
-# Server
-PORT=8080
-NODE_ENV=development
+# JWT
+JWT_SECRET=replace-with-strong-secret
+JWT_EXPIRES_IN=24h
 
-# Database (example values; do not use in production)
-DB_SERVER=localhost
-DB_DATABASE=your_database
-DB_USER=your_user
-DB_PASSWORD=your_password
+# SQL Server
+DB_SERVER=your-sql-host
+DB_DATABASE=your-db-name
+DB_USER=your-db-user
+DB_PASSWORD=your-db-password
 DB_PORT=1433
 DB_ENCRYPT=false
 DB_TRUST_SERVER_CERTIFICATE=true
 
-# Frontend URL / CORS
-FRONTEND_URL=http://localhost:5173
-CORS_ORIGIN=http://localhost:5173
-
-# JWT
-JWT_SECRET=please-change-this-secret
-JWT_EXPIRES_IN=24h
-
-# Uploads
-UPLOAD_MAX_SIZE=10485760
-UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,application/pdf,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-
-# Logging
-LOG_LEVEL=info
-LOG_FILE=logs/app.log
-
-# OpenProject
-OPENPROJECT_URL=https://your-openproject-url
-OPENPROJECT_API_KEY=your-api-key
-OPENPROJECT_API_VERSION=v3
-OPENPROJECT_SYNC_ENABLED=true
-
-# LDAP / Active Directory
-LDAP_URL=ldaps://your-ldap-host:636
+# LDAP (Active Directory)
+LDAP_URL=ldap://your-ldap-host:389
 LDAP_BASE_DN=DC=example,DC=com
-LDAP_BIND_DN=CN=ServiceUser,OU=Service Accounts,DC=example,DC=com
-LDAP_BIND_PASSWORD="change-me"
-LDAP_USER_SEARCH_BASE=DC=example,DC=com
+LDAP_BIND_DN=CN=bind.user,OU=Service Accounts,DC=example,DC=com
+LDAP_BIND_PASSWORD=replace-with-secret
+LDAP_USER_SEARCH_BASE=OU=Users,DC=example,DC=com
 LDAP_USER_SEARCH_FILTER=(sAMAccountName={username})
-LDAP_GROUP_SEARCH_BASE=DC=example,DC=com
+LDAP_GROUP_SEARCH_BASE=OU=Groups,DC=example,DC=com
 LDAP_TIMEOUT=5000
 LDAP_CONNECT_TIMEOUT=10000
 LDAP_TLS_REJECT_UNAUTHORIZED=false
 
 # LDAP Group → Role Mapping
-LDAP_GROUP_SUPERADMIN=CN=Superadmin,CN=Users,DC=example,DC=com
-LDAP_GROUP_ADMIN=CN=Admin,OU=Groups,DC=example,DC=com
-LDAP_GROUP_HR_GENERAL=CN=HR-General,OU=Groups,DC=example,DC=com
-LDAP_GROUP_FINANCE=CN=Finance,OU=Groups,DC=example,DC=com
-LDAP_GROUP_DEP_REP=CN=Department-Rep,OU=Groups,DC=example,DC=com
+LDAP_GROUP_SUPERADMIN=CN=Your-Superadmin-Group,OU=Groups,DC=example,DC=com
+LDAP_GROUP_ADMIN=CN=Your-Admin-Group,OU=Groups,DC=example,DC=com
+LDAP_GROUP_HR_GENERAL=CN=Your-HR-Group,OU=Groups,DC=example,DC=com
+LDAP_GROUP_FINANCE=CN=Your-Finance-Group,OU=Groups,DC=example,DC=com
+LDAP_GROUP_DEP_REP=CN=Your-DeptRep-Group,OU=Groups,DC=example,DC=com
+
