ci: update frontend port and add multiple frontend URLs
Update frontend service port from 8080 to 9100 and add support for multiple frontend URLs in backend configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - ./.env
     environment:
       BACKEND_PORT: "${BACKEND_PORT:-8083}"
-      FRONTEND_URL: "http://localhost:8080"
+      FRONTEND_URL: "http://localhost:9100"
+      FRONTEND_URLS: "http://localhost:9100,http://127.0.0.1:9100"
     ports:
       - "${BACKEND_PORT:-8083}:8083"
     networks:
@@ -31,11 +32,10 @@ services:
     depends_on:
       - api
     ports:
-      - "8080:80"
+      - "9100:80"
     networks:
       - app-net
 
 networks:
   app-net:
     driver: bridge
-
