build: add index.html to Dockerfile copy commands
The index.html file was missing from the Docker build context, which is required for the web application to function properly.

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -4,6 +4,7 @@ COPY package.json package-lock.json* ./
 RUN npm ci --no-audit --no-fund
 
 COPY tsconfig*.json vite.config.ts tailwind.config.ts ./
+COPY index.html ./
 COPY src ./src
 COPY public ./public
 
