--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -10,11 +10,10 @@ server {
   }
 
   location /api/ {
-    proxy_pass http://api:8083/api/;
+    proxy_pass http://employee-hub-api:8083/api/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
-
