build(docker): copy package.json to final docker image
Ensure package.json is available in runtime for version checks and metadata

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,7 @@ WORKDIR /app/backend
 
 COPY --from=build /app/backend/node_modules ./node_modules
 COPY --from=build /app/backend/dist ./dist
+COPY --from=build /app/backend/package.json ./package.json
 
 EXPOSE 8083
 CMD ["node", "dist/src/server.js"]
