--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "employee-central-hub-backend",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "cross-env BACKEND_PORT=8083 tsx src/server.ts",
     "build": "tsc -p tsconfig.json",
