feat(backend): add CORS_ALLOW_ALL flag to enable all origins
Add configuration option to bypass CORS origin checks when needed for development or testing purposes. This provides more flexibility during local development while maintaining security in production.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       BACKEND_PORT: "${BACKEND_PORT:-8083}"
       FRONTEND_URL: "http://localhost:9100"
       FRONTEND_URLS: "http://localhost:9100,http://127.0.0.1:9100"
+      CORS_ALLOW_ALL: "true"
     ports:
       - "${BACKEND_PORT:-8083}:8083"
     networks:
