build: add postcss.config.js to Dockerfile copy list
Include postcss.config.js in the files copied during Docker image build to ensure all required configuration files are available

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY package.json package-lock.json* ./
 RUN npm ci --no-audit --no-fund
 
-COPY tsconfig*.json vite.config.ts tailwind.config.ts ./
+COPY tsconfig*.json vite.config.ts tailwind.config.ts postcss.config.js ./
 COPY index.html ./
 COPY src ./src
 COPY public ./public
