feat(rbac): enhance role-based access control with department_rep support
- Update role naming from 'dep_rep' to 'department_rep' across frontend and backend
- Add bulk set functionality for column access permissions
- Improve role normalization and deduplication logic
- Extend database schema with additional RBAC columns
- Add frontend UI for bulk permission management

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "ldapjs": "^2.3.3",
     "mssql": "^12.2.0",
+    "vite_react_shadcn_ts": "file:..",
     "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
