feat(employee): update employment status values and validation
- Expand employment status options to include more detailed states
- Add normalization function for backward compatibility
- Update frontend components to match new status values
- Ensure proper validation in both frontend and backend
- Update mock data and templates to use new status values

--- a/backend/scripts/dbinfo-mapping.json
+++ b/backend/scripts/dbinfo-mapping.json
@@ -721,7 +721,7 @@
   },
   {
     "excel": {
-      "table": "employee_onboard",
+      "table": "employee_employment",
       "schema": "dbo",
       "column": "employment_status",
       "excelName": "Employment Status",
@@ -729,7 +729,7 @@
       "usedTableHeader": "Table Name"
     },
     "matched": {
-      "table": "dbo.employee_onboard",
+      "table": "dbo.employee_employment",
       "column": "employment_status",
       "type": "varchar"
     },
