feat(user-preferences): add user preferences storage and column visibility control
- Implement user_preferences table creation in database
- Add GET/PUT endpoints for user preferences under /users/me/preferences
- Add column visibility toggle functionality to employee list
- Persist column visibility preferences per user

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,10 @@
     "map:dbinfo": "tsx scripts/map-schema-from-dbinfo.ts",
     "inspect:dbinfo": "tsx scripts/inspect-db-information.ts",
     "ensure:note": "tsx scripts/ensure-note-column.ts",
+    "ensure:preferences": "tsx scripts/init-user-preferences.ts",
     "test:import": "tsx scripts/import-smoke-test.ts",
     "test:import:csv": "tsx scripts/import-from-public-csv.ts",
-    "verify:import:csv": "tsx scripts/verify-import-indonesia-csv.ts",
+    "verify:import:indonesia-csv": "tsx scripts/verify-import-indonesia-csv.ts",
     "import:csv:full": "tsx scripts/import-from-importfile.ts",
     "list:employees": "tsx scripts/list-employees.ts",
     "get:employee": "tsx scripts/get-employee.ts",
