--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "inspect:dbinfo": "tsx scripts/inspect-db-information.ts",
     "ensure:note": "tsx scripts/ensure-note-column.ts",
     "ensure:preferences": "tsx scripts/init-user-preferences.ts",
+    "ensure:rbac": "tsx scripts/init-rbac-schemas.ts",
     "test:import": "tsx scripts/import-smoke-test.ts",
     "test:import:csv": "tsx scripts/import-from-public-csv.ts",
     "verify:import:indonesia-csv": "tsx scripts/verify-import-indonesia-csv.ts",
