feat(sync): implement one-way sync from EmployeeWorkflow to MTIMasterEmployeeDB
Add sync feature including backend service, API endpoints, and UI components
- Create sync service with configurable field mapping and scheduling
- Add admin UI for manual sync runs and configuration
- Implement employee list enhancements with sync status and manual trigger
- Add diagnostics script for inspecting source data schema

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
     "typecheck": "tsc --noEmit -p tsconfig.json",
+    "inspect:workflow:mtiusers": "tsx scripts/inspect-workflow-users.ts",
     "scan:schema": "tsx scripts/scan-schema.ts",
     "map:schema": "tsx scripts/map-schema-from-excel.ts",
     "map:schema:final": "tsx scripts/build-final-mapping.ts",
