feat(employee): add residen field for expat employees
- Add residen field to employee core interface and database mapping
- Include residen in CSV templates and sample data
- Display residen field in employee detail and edit views
- Add residen to checklist editor for expat employees
- Update backend routes to handle residen field in CRUD operations

--- a/backend/scripts/dbinfo-mapping.json
+++ b/backend/scripts/dbinfo-mapping.json
@@ -1425,6 +1425,24 @@
     "excel": {
       "table": "employee_core",
       "schema": "dbo",
+      "column": "residen",
+      "excelName": "Residen",
+      "usedColumnHeader": "DB Column",
+      "usedTableHeader": "Table Name"
+    },
+    "matched": {
+      "table": "dbo.employee_core",
+      "column": "residen",
+      "type": "bit"
+    },
+    "status": "column_matched",
+    "suggestion": null,
+    "suggestions": null
+  },
+  {
+    "excel": {
+      "table": "employee_core",
+      "schema": "dbo",
       "column": "field",
       "excelName": "Field",
       "usedColumnHeader": "DB Column",
