--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@supabase/supabase-js": "^2.88.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/papaparse": "^5.5.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
